--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,27 @@
 body{
     overflow-x: hidden;
 }
+
+button:focus{
+    box-shadow: none;
+}
+
+
+/* navbar css */
+
+.my-nav-mine,.my-search-button{
+    top:0;
+    right: 25px;
+
+    background-color:transparent;
+    outline: none;
+    border:2px solid transparent;
+
+}
+
+.my-nav-mine:focus,.my-search-button:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
