--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ button:focus{
 
 
 /* navbar css */
+ul.navbar-nav>li.nav-item>a.nav-link{
+    /* font-weight: 500; */
+    /* font-size: 1rem; */
+}
 
 .my-nav-mine,.my-search-button{
     top:0;
