--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,26 @@ ul.navbar-nav>li.nav-item>a.nav-link{
     box-shadow: none;
 }
 
+
+/* slider */
+.bg-carosol{
+    background: #FEEAE9;
+}
+
+.price{
+    font-weight: 500;
+font-size: 2.5rem;
+line-height: 3.5rem;
+color: #FF136F;
+
+}
+.carousel-content button{
+    background: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);
+
+    color:#fff;
+    border-radius: 5%;
+    outline:none;
+    border:1px solid transparent;
+
+}
+
